* Improved template and added template wrapper classes for twig and smarty
* Improved DI container interoperability it is now possible to use the symfony 
  DI container instead of the psx DI container
* Use composer autoloader
* Added json activity stream writer
* Add simple xrds writer
* Extract xml, atom and rss writer into class for usage outside of the data 
  writer context
* Added Sitemap an Odata libraries
* Improved activity stream classes
* Add method get, getBy and getOneBy to handler interface

0.5.4
* Fixed record serialize
* Fix select remove getDefaultRecordClass call from underlying table and remove
  getResultSet method
* Improved select and record test

0.5.3
* Fix Oauth2 error exception types
* Improve handler abstract and interface
* Use json encode/decode to un/serialize records
* ResultSet add getter methods and add(), clear() method
* Remove static parse methods from Condition
* Remove getDefaultRecordClass from TableAbstract since the table has not to 
  decide wich object should be used this is part of the handler
* Improve tests and remove create table statments in tests

0.5.2
* Use port in base self url
* Config option to set include path

0.5.1
* Added autoload parameter in config to disable autoloading in case an external
  autoloader like composer is used
* Added payment paypal and skrill library
* Improve record added import annotation parsing and added Serializable 
  interface
* Fixed wrong name in OpenId provider namespace

0.5
* Added namespace support
* Improved db tests
* Improved html parser library
* Added pingback library
* Validate, parameter and body objects are now loaded in an DI container
* Load dependencies in _ini() method instead of __construct()
* Fixed markdown parser and sql select

0.4.7
* Added classes to generate an swagger api declaration and util annotation 
  parser
* Improved autoloader using stream_resolve_include_path before require the class
  so the autoload will not fail if the file doesnt exists